// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ListView should render 1`] = `
<div>
  <table
    aria-label="client-list"
    class="MuiTable-root"
  >
    <thead
      class="MuiTableHead-root"
    >
      <tr
        class="MuiTableRow-root MuiTableRow-head"
      >
        <th
          class="MuiTableCell-root MuiTableCell-head"
          scope="col"
        >
          Name
        </th>
        <th
          class="MuiTableCell-root MuiTableCell-head"
          scope="col"
        >
          Role in Project
        </th>
        <th
          class="MuiTableCell-root MuiTableCell-head"
          scope="col"
        >
          Location
        </th>
        <th
          class="MuiTableCell-root MuiTableCell-head"
          scope="col"
        >
          Trades
        </th>
        <th
          class="MuiTableCell-root MuiTableCell-head"
          scope="col"
        >
          Status in Project
        </th>
      </tr>
    </thead>
    <tbody
      class="MuiTableBody-root"
    >
      <tr
        class="MuiTableRow-root WithStyles(ForwardRef(TableRow))-root-114 makeStyles-pointer-16"
        data-testid="client-list-row"
      >
        <td
          class="MuiTableCell-root MuiTableCell-body"
          data-testid="project-client-row"
        >
          Robert C. Martin
        </td>
        <td
          class="MuiTableCell-root MuiTableCell-body"
        >
          Developer
        </td>
        <td
          class="MuiTableCell-root MuiTableCell-body"
        >
          New York
          , 
        </td>
        <td
          class="MuiTableCell-root MuiTableCell-body"
        >
          trade 1, trade 2
        </td>
        <td
          class="MuiTableCell-root MuiTableCell-body"
        >
          <div
            class="MuiChip-root makeStyles-statusChip-77 makeStyles-pending-84  MuiChip-colorPrimary"
          >
            <span
              class="MuiChip-label"
            >
              Pending
            </span>
          </div>
        </td>
      </tr>
      <tr
        class="MuiTableRow-root WithStyles(ForwardRef(TableRow))-root-114 makeStyles-pointer-16"
        data-testid="client-list-row"
      >
        <td
          class="MuiTableCell-root MuiTableCell-body"
          data-testid="project-client-row"
        >
          Martin Fowler
        </td>
        <td
          class="MuiTableCell-root MuiTableCell-body"
        >
          General Contractor
        </td>
        <td
          class="MuiTableCell-root MuiTableCell-body"
        >
          -
        </td>
        <td
          class="MuiTableCell-root MuiTableCell-body"
        >
          trade 1, trade 2, trade 3, some trade
        </td>
        <td
          class="MuiTableCell-root MuiTableCell-body"
        >
          <div
            class="MuiChip-root makeStyles-statusChip-77 makeStyles-active-83  MuiChip-colorPrimary"
          >
            <span
              class="MuiChip-label"
            >
              Accepted
            </span>
          </div>
        </td>
      </tr>
    </tbody>
  </table>
  <nav
    aria-label="pagination navigation"
    class="MuiPagination-root  makeStyles-pagination-115"
    data-testid="pagination"
  >
    <ul
      class="MuiPagination-ul"
    >
      <li>
        <button
          aria-label="Go to previous page"
          class="MuiButtonBase-root MuiPaginationItem-root MuiPaginationItem-page Mui-disabled Mui-disabled"
          disabled=""
          tabindex="-1"
          type="button"
        >
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root MuiPaginationItem-icon"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M15.41 7.41L14 6l-6 6 6 6 1.41-1.41L10.83 12z"
            />
          </svg>
        </button>
      </li>
      <li>
        <button
          aria-current="true"
          aria-label="page 1"
          class="MuiButtonBase-root MuiPaginationItem-root MuiPaginationItem-page Mui-selected"
          tabindex="0"
          type="button"
        >
          1
          <span
            class="MuiTouchRipple-root"
          />
        </button>
      </li>
      <li>
        <button
          aria-label="Go to page 2"
          class="MuiButtonBase-root MuiPaginationItem-root MuiPaginationItem-page"
          tabindex="0"
          type="button"
        >
          2
          <span
            class="MuiTouchRipple-root"
          />
        </button>
      </li>
      <li>
        <button
          aria-label="Go to next page"
          class="MuiButtonBase-root MuiPaginationItem-root MuiPaginationItem-page"
          tabindex="0"
          type="button"
        >
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root MuiPaginationItem-icon"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M10 6L8.59 7.41 13.17 12l-4.58 4.59L10 18l6-6z"
            />
          </svg>
          <span
            class="MuiTouchRipple-root"
          />
        </button>
      </li>
    </ul>
  </nav>
  <div
    class="MuiDrawer-root MuiDrawer-docked makeStyles-drawer-116 makeStyles-close-127 closed"
    data-testid="client-drawer-detail"
  >
    <div
      class="MuiPaper-root MuiDrawer-paper makeStyles-drawerPaper-117 MuiDrawer-paperAnchorRight MuiDrawer-paperAnchorDockedRight MuiPaper-elevation0"
      style="visibility: hidden; webkit-transform: translateX(1024px) translateX(0px); transform: translateX(1024px) translateX(0px);"
    >
      <div
        class="makeStyles-drawerButtonWrapper-119"
      >
        <div
          class="makeStyles-drawerButton-120"
        >
          <button
            class="MuiButtonBase-root MuiButton-root MuiButton-text"
            data-testid="drawer-close-btn"
            style="outline: none;"
            tabindex="0"
            type="button"
          >
            <span
              class="MuiButton-label"
            >
              <svg>
                close.svg
              </svg>
            </span>
            <span
              class="MuiTouchRipple-root"
            />
          </button>
        </div>
        <div
          class="makeStyles-drawerHeader-118"
        >
          <p
            class="MuiTypography-root makeStyles-drawerTitle-121 MuiTypography-body1 MuiTypography-colorPrimary MuiTypography-alignLeft"
          >
            Client Information
          </p>
        </div>
      </div>
      <div
        class="makeStyles-listDetail-146"
      >
        <div
          class="makeStyles-company-147"
        >
          <div
            class="makeStyles-drawerText-123"
          >
            <p
              class="MuiTypography-root makeStyles-listAccent-148 makeStyles-entityTitle-145 MuiTypography-body1"
            />
            <div
              class="makeStyles-drawerMainText-124"
            >
              <span>
                -
              </span>
              <span>
                -
              </span>
              <span />
            </div>
          </div>
          <div
            class="makeStyles-drawerSection-122"
          >
            <svg>
              location.svg
            </svg>
            <div
              class="makeStyles-drawerText-123 makeStyles-drawerTextSeparation-125"
            >
              <p
                class="MuiTypography-root makeStyles-cardFont-185  MuiTypography-body1"
              >
                
                <span
                  class=" "
                >
                  -
                </span>
              </p>
              <p
                class="MuiTypography-root makeStyles-cardFont-185  MuiTypography-body1"
              >
                
                
                
                
              </p>
            </div>
          </div>
          <div
            class="makeStyles-drawerSection-122"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M20 4H4c-1.1 0-1.99.9-1.99 2L2 18c0 1.1.9 2 2 2h16c1.1 0 2-.9 2-2V6c0-1.1-.9-2-2-2zm0 4l-8 5-8-5V6l8 5 8-5v2z"
              />
            </svg>
            <div
              class="makeStyles-drawerText-123 makeStyles-drawerTextSeparation-125"
            >
              <p
                class="MuiTypography-root makeStyles-cardFont-185  MuiTypography-body1"
              >
                
                <span
                  class=" "
                >
                  -
                </span>
              </p>
              <p
                class="MuiTypography-root makeStyles-cardFont-185  MuiTypography-body1"
              >
                
                
                
                
              </p>
            </div>
          </div>
          <div
            class="makeStyles-drawerSection-122"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M12 12c2.21 0 4-1.79 4-4s-1.79-4-4-4-4 1.79-4 4 1.79 4 4 4zm0 2c-2.67 0-8 1.34-8 4v2h16v-2c0-2.66-5.33-4-8-4z"
              />
            </svg>
            <div
              class="makeStyles-drawerText-123 makeStyles-drawerTextSeparation-125"
            >
              <span
                class="makeStyles-listAccent-148"
              >
                -
              </span>
              <span>
                -
              </span>
              <span>
                -
              </span>
            </div>
          </div>
        </div>
        <hr
          class="MuiDivider-root makeStyles-drawerDivider-126"
        />
        <div
          class="makeStyles-ctaWrapper-149"
        >
          <span
            class=""
            data-testid="controlled-button"
            tabindex="-1"
          >
            <button
              class="MuiButtonBase-root MuiButton-root MuiButton-outlined makeStyles-drawerCTA-165 makeStyles-borderPrimaryButton-157"
              data-testid="drawerEditTaxButton"
              tabindex="0"
              type="button"
            >
              <span
                class="MuiButton-label"
              >
                Edit Taxes
              </span>
            </button>
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`ListView should render client info 1`] = `
<div>
  <table
    aria-label="client-list"
    class="MuiTable-root"
  >
    <thead
      class="MuiTableHead-root"
    >
      <tr
        class="MuiTableRow-root MuiTableRow-head"
      >
        <th
          class="MuiTableCell-root MuiTableCell-head"
          scope="col"
        >
          Name
        </th>
        <th
          class="MuiTableCell-root MuiTableCell-head"
          scope="col"
        >
          Role in Project
        </th>
        <th
          class="MuiTableCell-root MuiTableCell-head"
          scope="col"
        >
          Location
        </th>
        <th
          class="MuiTableCell-root MuiTableCell-head"
          scope="col"
        >
          Trades
        </th>
        <th
          class="MuiTableCell-root MuiTableCell-head"
          scope="col"
        >
          Status in Project
        </th>
      </tr>
    </thead>
    <tbody
      class="MuiTableBody-root"
    >
      <tr
        class="MuiTableRow-root WithStyles(ForwardRef(TableRow))-root-834 makeStyles-pointer-736"
        data-testid="client-list-row"
      >
        <td
          class="MuiTableCell-root MuiTableCell-body"
          data-testid="project-client-row"
        >
          Robert C. Martin
        </td>
        <td
          class="MuiTableCell-root MuiTableCell-body"
        >
          Developer
        </td>
        <td
          class="MuiTableCell-root MuiTableCell-body"
        >
          New York
          , 
        </td>
        <td
          class="MuiTableCell-root MuiTableCell-body"
        >
          trade 1, trade 2
        </td>
        <td
          class="MuiTableCell-root MuiTableCell-body"
        >
          <div
            class="MuiChip-root makeStyles-statusChip-797 makeStyles-pending-804  MuiChip-colorPrimary"
          >
            <span
              class="MuiChip-label"
            >
              Pending
            </span>
          </div>
        </td>
      </tr>
      <tr
        class="MuiTableRow-root WithStyles(ForwardRef(TableRow))-root-834 makeStyles-pointer-736"
        data-testid="client-list-row"
      >
        <td
          class="MuiTableCell-root MuiTableCell-body"
          data-testid="project-client-row"
        >
          Martin Fowler
        </td>
        <td
          class="MuiTableCell-root MuiTableCell-body"
        >
          General Contractor
        </td>
        <td
          class="MuiTableCell-root MuiTableCell-body"
        >
          -
        </td>
        <td
          class="MuiTableCell-root MuiTableCell-body"
        >
          trade 1, trade 2, trade 3, some trade
        </td>
        <td
          class="MuiTableCell-root MuiTableCell-body"
        >
          <div
            class="MuiChip-root makeStyles-statusChip-797 makeStyles-active-803  MuiChip-colorPrimary"
          >
            <span
              class="MuiChip-label"
            >
              Accepted
            </span>
          </div>
        </td>
      </tr>
    </tbody>
  </table>
  <nav
    aria-label="pagination navigation"
    class="MuiPagination-root  makeStyles-pagination-835"
    data-testid="pagination"
  >
    <ul
      class="MuiPagination-ul"
    >
      <li>
        <button
          aria-label="Go to previous page"
          class="MuiButtonBase-root MuiPaginationItem-root MuiPaginationItem-page Mui-disabled Mui-disabled"
          disabled=""
          tabindex="-1"
          type="button"
        >
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root MuiPaginationItem-icon"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M15.41 7.41L14 6l-6 6 6 6 1.41-1.41L10.83 12z"
            />
          </svg>
        </button>
      </li>
      <li>
        <button
          aria-current="true"
          aria-label="page 1"
          class="MuiButtonBase-root MuiPaginationItem-root MuiPaginationItem-page Mui-selected"
          tabindex="0"
          type="button"
        >
          1
          <span
            class="MuiTouchRipple-root"
          />
        </button>
      </li>
      <li>
        <button
          aria-label="Go to page 2"
          class="MuiButtonBase-root MuiPaginationItem-root MuiPaginationItem-page"
          tabindex="0"
          type="button"
        >
          2
          <span
            class="MuiTouchRipple-root"
          />
        </button>
      </li>
      <li>
        <button
          aria-label="Go to next page"
          class="MuiButtonBase-root MuiPaginationItem-root MuiPaginationItem-page"
          tabindex="0"
          type="button"
        >
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root MuiPaginationItem-icon"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M10 6L8.59 7.41 13.17 12l-4.58 4.59L10 18l6-6z"
            />
          </svg>
          <span
            class="MuiTouchRipple-root"
          />
        </button>
      </li>
    </ul>
  </nav>
  <div
    class="MuiDrawer-root MuiDrawer-docked makeStyles-drawer-836 makeStyles-close-847 closed"
    data-testid="client-drawer-detail"
  >
    <div
      class="MuiPaper-root MuiDrawer-paper makeStyles-drawerPaper-837 MuiDrawer-paperAnchorRight MuiDrawer-paperAnchorDockedRight MuiPaper-elevation0"
      style="visibility: hidden; webkit-transform: translateX(1024px) translateX(0px); transform: translateX(1024px) translateX(0px);"
    >
      <div
        class="makeStyles-drawerButtonWrapper-839"
      >
        <div
          class="makeStyles-drawerButton-840"
        >
          <button
            class="MuiButtonBase-root MuiButton-root MuiButton-text"
            data-testid="drawer-close-btn"
            style="outline: none;"
            tabindex="0"
            type="button"
          >
            <span
              class="MuiButton-label"
            >
              <svg>
                close.svg
              </svg>
            </span>
            <span
              class="MuiTouchRipple-root"
            />
          </button>
        </div>
        <div
          class="makeStyles-drawerHeader-838"
        >
          <p
            class="MuiTypography-root makeStyles-drawerTitle-841 MuiTypography-body1 MuiTypography-colorPrimary MuiTypography-alignLeft"
          >
            Client Information
          </p>
        </div>
      </div>
      <div
        class="makeStyles-listDetail-866"
      >
        <div
          class="makeStyles-company-867"
        >
          <div
            class="makeStyles-drawerText-843"
          >
            <p
              class="MuiTypography-root makeStyles-listAccent-868 makeStyles-entityTitle-865 MuiTypography-body1"
            />
            <div
              class="makeStyles-drawerMainText-844"
            >
              <span>
                -
              </span>
              <span>
                -
              </span>
              <span />
            </div>
          </div>
          <div
            class="makeStyles-drawerSection-842"
          >
            <svg>
              location.svg
            </svg>
            <div
              class="makeStyles-drawerText-843 makeStyles-drawerTextSeparation-845"
            >
              <p
                class="MuiTypography-root makeStyles-cardFont-905  MuiTypography-body1"
              >
                
                <span
                  class=" "
                >
                  -
                </span>
              </p>
              <p
                class="MuiTypography-root makeStyles-cardFont-905  MuiTypography-body1"
              >
                
                
                
                
              </p>
            </div>
          </div>
          <div
            class="makeStyles-drawerSection-842"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M20 4H4c-1.1 0-1.99.9-1.99 2L2 18c0 1.1.9 2 2 2h16c1.1 0 2-.9 2-2V6c0-1.1-.9-2-2-2zm0 4l-8 5-8-5V6l8 5 8-5v2z"
              />
            </svg>
            <div
              class="makeStyles-drawerText-843 makeStyles-drawerTextSeparation-845"
            >
              <p
                class="MuiTypography-root makeStyles-cardFont-905  MuiTypography-body1"
              >
                
                <span
                  class=" "
                >
                  -
                </span>
              </p>
              <p
                class="MuiTypography-root makeStyles-cardFont-905  MuiTypography-body1"
              >
                
                
                
                
              </p>
            </div>
          </div>
          <div
            class="makeStyles-drawerSection-842"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M12 12c2.21 0 4-1.79 4-4s-1.79-4-4-4-4 1.79-4 4 1.79 4 4 4zm0 2c-2.67 0-8 1.34-8 4v2h16v-2c0-2.66-5.33-4-8-4z"
              />
            </svg>
            <div
              class="makeStyles-drawerText-843 makeStyles-drawerTextSeparation-845"
            >
              <span
                class="makeStyles-listAccent-868"
              >
                -
              </span>
              <span>
                -
              </span>
              <span>
                -
              </span>
            </div>
          </div>
        </div>
        <hr
          class="MuiDivider-root makeStyles-drawerDivider-846"
        />
        <div
          class="makeStyles-ctaWrapper-869"
        >
          <span
            class=""
            data-testid="controlled-button"
            tabindex="-1"
          >
            <button
              class="MuiButtonBase-root MuiButton-root MuiButton-outlined makeStyles-drawerCTA-885 makeStyles-borderPrimaryButton-877"
              data-testid="drawerEditTaxButton"
              tabindex="0"
              type="button"
            >
              <span
                class="MuiButton-label"
              >
                Edit Taxes
              </span>
            </button>
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`ListView should render loading 1`] = `
<div>
  Loading...
</div>
`;
